Todo

* html language
* title 
* content keyword
* Favicon
* Logo i need costumer input
* Navbar custom (4x max 5)
* Edit links 


* RGPD Lows
* Test death links
* Breaking news Bar
* googlemap Custom


Adap Links x
Adap Banner heigth x