@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>NEUROLOGIE EUPEN SASPJ - Index</title>
+  <title>Neurologie Eurpen sapj</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -57,17 +57,21 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
       
+      
+      
       <!-- ======= Breaking News  Start======= -->
-    <div class="container">
-    <div class="row">
+      <div class="container">
+          <div class="row">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center breaking-news bg-white">
                 <div class="d-flex flex-row flex-grow-1 flex-fill justify-content-center bg-danger py-2 text-white px-1 news"><span class="d-flex align-items-center">&nbsp;Last News</span></div>
                 <marquee class="news-scroll" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> 
                         
                     <!---- News Inhalt getrennt mit einem roten Punkt -->
-                    To activate Only for breaking news <span class="dot"></span> 
-                    Ohlala kein besuch <span class="dot"></span> 
+                    
+                    Dr. Soundjock ist  im Urlaub <span class="dot"></span> 
+                    Corona kein kein <span class="dot"></span> 
+                    
                     Ohlala Urlaub
                 
                 </marquee>
@@ -75,8 +79,7 @@
         </div>
         </div>
       </div>
-      <!-- ======= Breaking News End======= -->
-      
+      <!-- ======= Breaking News End======= -->      
       <br>
       
       
@@ -87,16 +90,15 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Über uns</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Kontakt</a></li>
+          <li><a class="nav-link scrollto" href="#contact"><span class="flag-icon flag-icon-fr"> </span></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
-      <a href="#" class="flag-btn scrollto"><span class="flag-icon flag-icon-fr"> </span> </a>
+    <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Termin Vereinbaren</span> </a>
     </div>
   </header><!-- End Header -->
 
@@ -113,7 +115,10 @@
           <div class="container">
             <h2>Willkommen zu <span>NEUROLOGIE EUPEN SASPJ</span></h2>
             <p>
-                Neurologische Partnerschaft Eupen, Ihr Ansprechpartnet für das Fachgebiet Neurologie in Eupen und Umgebung
+                Abstand Halten  <br>
+                Hände waschen <br>
+                
+                Partnerschaft Eupen, Ihr Ansprechpartnet für das Fachgebiet Neurologie in Eupen und Umgebung
                 </p>
             <!-- a href="#about" class="btn-get-started scrollto">Read More</a-->
           </div>
@@ -467,33 +472,22 @@ Dabei ist eine enge Kooperation mit dem CHC Lüttich, dem CHR Citadelle und der 
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                
               </div>
               <div class="member-info">
                 <h4>Dr. Alain Pirard</h4>
                   <span>Neurologie</span>
                 <br>
                 
-                <h4>Sekretariat</h4>
-                  <span>Frau Rebecca Conrath</span> 
-                  <span>Frau Cindy Laschet</span>          
+                <h4>Sprechzeiten</h4>
+                  <span>Mo. - Fr. Klinik mores..</span> 
+                  <span>Mo. - Fr.  Poliklinik Moresnet </span>          
                   <br>
-                  
-                <h4>Standorten</h4>
                   <span>Praxis Bennetsborn</span> 
                   <span>Poliklinik Moresnet</span> 
                   <span>Sankt-Nikolaus Hospital</span>
                   <br>
-                  
-                <h4>Untersuchungen</h4>
-                <span>Alle elektrophysiologische Untersuchungen der Neurologie sowie extrakranielle Duplexsonographie</span>
                   <br>
-                  
                   <a href="https://agenda.clininet.com?accesscode=SCRG25&lang=de" target="_blank" class="appointment-btn scrollto"> Termin Vereinbaren </a>
                   <br>
               </div>
@@ -574,71 +568,18 @@ Dabei ist eine enge Kooperation mit dem CHC Lüttich, dem CHR Citadelle und der 
       </div>
     </section><!-- End Doctors Section -->
 
-    <!-- ======= Frequently Asked Questioins Section ======= -->
-    <!--section id="faq" class="faq">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Frequently Asked Questioins</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <ul class="faq-list">
-          <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-              </p>
-            </div>
-          </li>      
-
-        </ul>
-
-      </div>
-    </section><!-- End Frequently Asked Questioins Section -->
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
-
-        <div class="section-title">
+          <div class="section-title">
           <h2>Kontakt</h2>
-        </div>
-
-      </div>
-
-      <!-- div>
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-      </div -->
-         <div class="container">
-            <!-- iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.4004965205804!2d6.026489715859876!3d50.63825278169575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c085a54e0dc063%3A0x81e4a3b1e67d2735!2sBennetsborn%208%2C%204700%20Eupen%2C%20Belgien!5e0!3m2!1sde!2sde!4v1614796061294!5m2!1sde!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe-->
-            
-          <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/d/embed?mid=1SxJdzTjHoOActkHO7Lmf94ZVeYFtJyMY" frameborder="1" allowfullscreen></iframe>
-        </div>
-
-        
-        
-        
-        
+          </div>
+       </div>        
 
       <div class="container">
-
-        <div class="row mt-5">
-
-          <div class="col-lg-6">
-
-            <div class="row">
-              <div class="col-md-12">
+          <div class="row mt-5">
+              <div class="col-lg-6">
+                  <div class="row"><div class="col-md-12">
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Unsere Anschrift</h3>
@@ -662,32 +603,21 @@ Dabei ist eine enge Kooperation mit dem CHC Lüttich, dem CHR Citadelle und der 
             </div>
 
           </div>
-
+            
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col form-group mt-3">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Senden</button></div>
-            </form>
-          </div>
 
+            <div class="row">
+              <div class="col-md-12">
+                  
+                  <iframe style="border:0; width: 100%; height: 385px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.4004965205804!2d6.026489715859876!3d50.63825278169575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c085a54e0dc063%3A0x81e4a3b1e67d2735!2sBennetsborn%208%2C%204700%20Eupen%2C%20Belgien!5e0!3m2!1sde!2sde!4v1614796061294!5m2!1sde!2sde" frameborder="1" allowfullscreen></iframe>
+
+                  
+              </div>
+            </div>
+
+          </div>
+            
+            
         </div>
 
       </div>
@@ -746,27 +676,8 @@ Dabei ist eine enge Kooperation mit dem CHC Lüttich, dem CHR Citadelle und der 
           </div>
             
              <div class="col-lg-4 col-md-6">
-            <div class="footer-info">
-              <h3>Sprechzeiten</h3>
-                
-                <p>
-                    Mo 8:00–12:00 Uhr, 14:00–16:00 Uhr <br>
-                    Di 8:00–12:00 Uhr, 14:00–16:00 Uhr <br>
-                    Mi 8:00–12:00 Uhr <br>
-                    Do 8:00–12:00 Uhr, 14:00–16:00 Uhr <br>
-                    Fr 8:00–12:00 Uhr
-                
-                </p>
-                
-                
-                
-                <br>
-                <p>
-                  <a href="#team" class="appointment-btn scrollto"> Termin Vereinbaren </a>
-                </p>
-                
-             
-            </div>
+    
+                 
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
