@@ -17,3 +17,11 @@ Todo
 
 Adap Links x
 Adap Banner heigth x
+
+
+Ref 
+https://www.mz-merols.be/
+https://dgkn.de/fuer-experten/fmrt
+
+
+Google Indexierung
